@@ -1,7 +1,6 @@
 package io.jenkins.docker.pipeline;
 
-import com.google.common.collect.ImmutableSet;
-
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.DescriptorExtensionList;
 import hudson.Extension;
 import hudson.FilePath;
@@ -14,6 +13,10 @@ import hudson.model.Node;
 import hudson.model.TaskListener;
 import hudson.util.ListBoxModel;
 import io.jenkins.docker.connector.DockerComputerConnector;
+import java.io.Serializable;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
 import jenkins.model.Jenkins;
 import org.jenkinsci.plugins.docker.commons.credentials.DockerServerEndpoint;
 import org.jenkinsci.plugins.workflow.graph.FlowNode;
@@ -25,13 +28,6 @@ import org.kohsuke.stapler.AncestorInPath;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.QueryParameter;
-
-import javax.annotation.Nonnull;
-
-import java.io.Serializable;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
 
 /**
  * @author <a href="mailto:nicolas.deloof@gmail.com">Nicolas De Loof</a>
@@ -114,38 +110,48 @@ public class DockerNodeStep extends Step {
             return "dockerNode";
         }
 
-        @Nonnull
+        @NonNull
         @Override
         public String getDisplayName() {
             return "Docker Node (⚠️ Experimental)";
         }
 
         public ListBoxModel doFillCredentialsIdItems(@AncestorInPath Item item, @QueryParameter String uri) {
-            DockerServerEndpoint.DescriptorImpl descriptor = (DockerServerEndpoint.DescriptorImpl) Jenkins.getInstance().getDescriptorOrDie(DockerServerEndpoint.class);
+            DockerServerEndpoint.DescriptorImpl descriptor =
+                    (DockerServerEndpoint.DescriptorImpl) Jenkins.get().getDescriptorOrDie(DockerServerEndpoint.class);
             return descriptor.doFillCredentialsIdItems(item, uri);
         }
 
-        @Override public boolean takesImplicitBlockArgument() {
+        @Override
+        public boolean takesImplicitBlockArgument() {
             return true;
         }
 
         @Override
         public Set<? extends Class<?>> getRequiredContext() {
-            return ImmutableSet.of(TaskListener.class, FlowNode.class);
+            return Set.of(TaskListener.class, FlowNode.class);
         }
 
-        @Override public Set<? extends Class<?>> getProvidedContext() {
-            // TODO can/should we provide Executor? We cannot access Executor.start(WorkUnit) from outside the package. cf. isAcceptingTasks, withContexts
-            return ImmutableSet.of(Computer.class, FilePath.class, /* DefaultStepContext infers from Computer: */ Node.class, Launcher.class);
+        @Override
+        public Set<? extends Class<?>> getProvidedContext() {
+            // TODO can/should we provide Executor? We cannot access Executor.start(WorkUnit) from outside the package.
+            // cf. isAcceptingTasks, withContexts
+            return Set.of(
+                    Computer.class,
+                    FilePath.class, /* DefaultStepContext infers from Computer: */
+                    Node.class,
+                    Launcher.class);
         }
 
         public List<Descriptor<? extends DockerComputerConnector>> getAcceptableConnectorDescriptors() {
             final List<Descriptor<? extends DockerComputerConnector>> result = new ArrayList<>();
-            final DescriptorExtensionList<DockerComputerConnector, Descriptor<DockerComputerConnector>> all = DockerComputerConnector.all();
+            final DescriptorExtensionList<DockerComputerConnector, Descriptor<DockerComputerConnector>> all =
+                    DockerComputerConnector.all();
             // Note: Not all DockerComputerConnector classes are suitable
             // We have to filter the list so the user doesn't select one that isn't ok.
             for (final Descriptor<? extends DockerComputerConnector> connectorDescriptor : all) {
-                final Class<? extends DockerComputerConnector> connectorClass = connectorDescriptor.getKlass().toJavaClass();
+                final Class<? extends DockerComputerConnector> connectorClass =
+                        connectorDescriptor.getKlass().toJavaClass();
                 final String reason = DockerNodeStepExecution.getReasonWhyThisIsNotASerializableDockerComputerConnector(
                         connectorClass.toGenericString(), connectorClass);
                 if (reason == null) {
