@@ -1,25 +1,23 @@
 package com.nirima.jenkins.plugins.docker.utils;
 
-import static org.junit.Assert.assertThat;
-import static org.hamcrest.Matchers.*;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.not;
+import static org.hamcrest.Matchers.sameInstance;
 
-import java.util.Arrays;
+import com.nirima.jenkins.plugins.docker.DockerCloud;
+import hudson.model.Label;
+import hudson.slaves.Cloud;
+import hudson.slaves.NodeProvisioner.PlannedNode;
+import io.jenkins.docker.client.DockerAPI;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-
 import org.jenkinsci.plugins.docker.commons.credentials.DockerServerEndpoint;
 import org.junit.Assert;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.JenkinsRule;
-
-import com.nirima.jenkins.plugins.docker.DockerCloud;
-
-import hudson.model.Label;
-import hudson.slaves.Cloud;
-import hudson.slaves.NodeProvisioner.PlannedNode;
-import io.jenkins.docker.client.DockerAPI;
 
 public class JenkinsUtilsTest {
 
@@ -35,7 +33,7 @@ public class JenkinsUtilsTest {
         final DockerCloud cloudExpected = new DockerCloud(expectedCloudName, dockerApi, Collections.emptyList());
         final DockerCloud cloudOther = new DockerCloud("otherCloudName", dockerApi, Collections.emptyList());
         final OtherTypeOfCloud cloudForeign = new OtherTypeOfCloud("foreign");
-        final List<Cloud> clouds = Arrays.asList(cloudEmpty, cloudOther, cloudExpected, cloudForeign);
+        final List<Cloud> clouds = List.of(cloudEmpty, cloudOther, cloudExpected, cloudForeign);
         jenkins.getInstance().clouds.replaceBy(clouds);
 
         // When
@@ -56,7 +54,7 @@ public class JenkinsUtilsTest {
         final String cloudName2 = "otherCloudName";
         final DockerCloud cloud2 = new DockerCloud(cloudName2, dockerApi, Collections.emptyList());
         final OtherTypeOfCloud cloudForeign = new OtherTypeOfCloud("foreign");
-        final List<Cloud> clouds = Arrays.asList(cloudEmpty, cloud2, cloud1, cloudForeign);
+        final List<Cloud> clouds = List.of(cloudEmpty, cloud2, cloud1, cloudForeign);
         jenkins.getInstance().clouds.replaceBy(clouds);
 
         try {
@@ -84,7 +82,7 @@ public class JenkinsUtilsTest {
         final String cloudName2 = "DockerCloud2Name";
         final DockerCloud cloud2 = new DockerCloud(cloudName2, dockerApi, Collections.emptyList());
         final OtherTypeOfCloud cloudForeign = new OtherTypeOfCloud(requestedCloudName);
-        final List<Cloud> clouds = Arrays.asList(cloudEmpty, cloud2, cloud1, cloudForeign);
+        final List<Cloud> clouds = List.of(cloudEmpty, cloud2, cloud1, cloudForeign);
         jenkins.getInstance().clouds.replaceBy(clouds);
 
         try {
